# se3_controller

./: .gitignore  CMakeLists.txt
config/: params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/se3_controller/lib/se3_controller/: controller_node
install/se3_controller/share/ament_index/resource_index/package_run_dependencies/: se3_controller
install/se3_controller/share/ament_index/resource_index/parent_prefix_path/: se3_controller
install/se3_controller/share/se3_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/se3_controller/share/se3_controller/cmake/: se3_controllerConfig.cmake
install/se3_controller/share/se3_controller/config/: params.yaml
launch/: record_se3_debug.launch.py  se3_controller_launch.py  sitl_test.launch.py
log/: latest_build
scripts/: test_se3_roll.py
src/: code.txt  controller_node.cpp  controller_node_backup.cpp  controller_node_visual.cpp
worlds/: aruco_landing.world  aruco_test.sdf
